2000-03-19  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* gc.c, gc.h (scm_gc_yield): New variable.
	(adjust_gc_trigger): Use scm_gc_yield.
	(alloc_some_heap): Use scm_gc_yield instead of
	scm_gc_cells_collected.

	* coop-threads.c: Addd #include "root.h", #include "strings.h".

	* debug.c: Added #include "root.h".  (Thanks to Thien-Thi Nguyen.)

	* gc.c (scm_gc_for_newcell, adjust_gc_trigger): Improved GC
	trigger adjustmeant: Take yield (freed cells) for all freelists
	into account.
	(SCM_INIT_HEAP_SIZE_1, SCM_GC_TRIGGER_1, SCM_GC_TRIGGER_2): Tuned
	to 50000 cell heap with 45% trigger.
	(scm_gc_cells_collected): Reintroduced.
	(SCM_HEAP_SIZE): New macro.
	(scm_gc_sweep): Reintroduced correct computation of
	scm_cells_allocated.
	(scm_freelist_t): Corrected commentary for field `cluster_size':
	Clustersize counts objects, not cells;  New member
	`clusters_allocated'.

2000-03-19  Michael Livshin  <mlivshin@bigfoot.com>

	* *.[hc]: add Emacs magic at the end of file, to ensure GNU
 	indentation style.

2000-03-19  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* threads.h: Added #include "libguile/throw.h".  (Thanks to
	Thien-Thi Nguyen.)

2000-03-18  Michael Livshin  <mlivshin@bigfoot.com>

	* tags.h: (SCM_DOUBLE_CELLP, SCM_NDOUBLE_CELLP): new macros.

	* gc.h: (typedef struct scm_freelist_t) remove from here.

	* gc.c: (CELL_UP, CELL_DN) make these macros take additional
 	parameter (the span).
	(CLUSTER_SIZE_IN_BYTES, ALIGNMENT_SLACK) new macros.
	(typedef struct scm_freelist_t) move here from gc.h, it had no
 	business being externally visible.
	(typedef struct scm_heap_seg_data_t) renamed from
 	scm_heap_seg_data, to be style-compliant.
	(scm_mark_locations) if the possible pointer points to a
 	multy-cell, check that it's properly aligned.
	(init_heap_seg) alighn multy-cells properly, work with the
 	assumption that the segment size divides cleanly by cluster size
 	(so that there's no spill).
	(round_to_cluster_size) new function.